# fernetpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  build.sh  requirements.json
BuildOpenSSL/: CMakeLists.txt
cmake/: IPO.cmake  JSONParser.cmake  OpenSSL.cmake  Packaging.cmake  Packing.cmake
include/fernet/: export.h  fernet.hh
packaging/: CMakeLists.txt  FernetConfig.cmake
src/: fernet.cc  fernet.hh  main.cc  main.cpp
